<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:src="@drawable/museo"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="13dp"
        android:background="#D2691E"
        android:text="@string/Title"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image_logo"
        android:layout_marginTop="13dp"
        android:text="@string/Location"
        android:textColor="#FFFFFF"
        android:textSize="12dp"

        android:background="#D2691E"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/additional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:text="@string/Additional"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Info_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/location"
        android:layout_marginTop="16dp"
        android:text="@string/Info"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/BtnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_alignTop="@+id/Info_location"
        android:layout_marginTop="28dp"
        android:text="@string/Map"
        android:textColor="#FFFFFF"
        android:background="#008000"
        android:drawableRight="@drawable/location"
        android:textSize="12dp"/>


    <TextView
        android:id="@+id/schedules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/image_logo"
        android:layout_alignStart="@+id/image_logo"
        android:layout_below="@+id/BtnMap"
        android:text="@string/SchedulesTitle"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        android:background="#D2691E"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Monday-Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/schedules"
        android:layout_alignStart="@+id/schedules"
        android:layout_below="@+id/schedules"
        android:layout_marginTop="12dp"
        android:text="@string/ShedulesDay"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Saturday-Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/Monday-Friday"
        android:layout_alignStart="@+id/Monday-Friday"
        android:layout_below="@+id/Monday-Friday"
        android:layout_marginTop="17dp"
        android:text="@string/ShedulesDays"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/Saturday-Sunday"
        android:layout_alignStart="@+id/Saturday-Sunday"
        android:layout_below="@+id/Saturday-Sunday"
        android:layout_marginTop="15dp"
        android:text="@string/ShedulesSunday"
        android:textColor="#000000"
        android:textSize="11dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/BtnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sunday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="#0000FF"
        android:drawableRight="@drawable/facebook"
        android:text="@string/Facebook"
        android:textColor="#FFFFFF"
        android:textSize="12dp"/>

</RelativeLayout>